src/styles/Header.css
/* Header and Menu CSS */
.header {
  background-color: #194b1e;
  height: 300px;
  width: 100%;
  display: flex;
  justify-content: space-between;
  position: relative;
  z-index: 10;
}

.headerLogo {
  top: 5px;
  left: 1px;
  height: 220px;
  width: 220px;
}

.hero-image {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  flex-direction: column;
  position: relative;
  width: 100%;
  height: 50vw;
  background-size: cover;
  color: white;
  overflow: hidden;
  z-index: 2; /* Ensure the hero image is behind the header */
}

.hero-image::after {
  content: "";
  position: absolute;
  height: 100%;
  z-index: 2;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: rgba(0, 0, 0, 0.1); /* This is the dark overlay */
}

.hero-image h2,
.hero-image p {
  font-size: 4em;
  position: relative; /* This ensures the text is on top of the overlay */
  z-index: 400; /* Make the z-index higher than the parent element */
  color: white; /* This makes the text white */
  text-align: center;
  align-content: center;
  padding: 20px;
}

.me-auto {
  display: flex;
  flex-direction: row;
  margin-top: -3em;
}


.socialIconBar {
  display: flex;
  justify-content: flex-end;
  margin-right: 3vw;
  font-size: 1.7vw;

}

.socialIcons {
  margin: 15px;
  transition: all 0.2s ease-in-out;
}

.socialIcons:hover {
  transform: scale(2.1);
  color: lightblue;
}

#email {
  color: white;
}

#email:hover {
  color: lightblue;
  text-decoration: none;
}

#phone {
  color: white;
}

#phone:hover {
  color: lightblue;
  text-decoration: none;
}

.visitMainWebsiteButton {
  cursor: hand;
  color: white;
  border-radius: 15px;
  font-size: 1.4vw;
  background-color: #194b1e;
  padding: 1.8vw;
  transition: all 0.2s ease-in-out;
}

.visitMainWebsiteButton:hover {
  color: white;
  transform: scale(4.1);
  cursor: hand;
  border-radius: 15px;
  font-size: 1.4vw;
  background-color: #194b1e;
  padding: 1.8vw;

}


/* =================== MENU =============================== */

#Menu{
  display: flex;
  z-index: 20;
  justify-content: space-around;
  list-style-type: none;
  padding: 0px 10px;

}

.MenuInfo {
  display: flex;
  flex-direction: row;
  color: white;
  padding: 0px 10px;
}

.ContactInfo {
  display: flex;
  justify-content: flex-end;
  padding: 0px 3vw;
  font-size: 1.5vw;
}

.MenuItem {
  display: flex;
  justify-content: space-around;

}

.InfoAndMenu {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  font-size: 2vw;
}

.nav-items{
  font-size: 1.9vw;
}

.menu-links {
  display: flex;
  justify-content: space-around;
  z-index: 20;
  padding: 0px 3vw;

  overflow: hidden;
  list-style-type: none;
}


.menu-links li {
  position: relative;
  padding: 0px 2vw;

  color: white;
  z-index: 2; /* Increase the z-index value */
}

.menu-links li a {
  color: white;
  flex-wrap: nowrap;
  text-decoration: none;
  transition: all 0.2s ease-in-out;
}

.menu-links li a:hover {
  transform: scale(1.1);
  color: lightgreen;
}

.submenu {
  display: none;
  position: absolute;
  top: 100%;
  background-color: #194b1e;
  width: 20em;
  border-radius: 5px;
  padding: 10px;
  z-index: 30; /* Increase the z-index value */
}

.menu-links li:hover .submenu {
  display: block;
}

.submenu li {
  display: block;
  margin: 5px 0;
}

.submenu li a {
  font-size: 20px;
}

.submenu li a:hover {
  color: lightgreen;
}


.menu-links.open {
  display: flex;
}

.menu-toggle {
  display: none;
  font-size: 24px;
  color: white;
  cursor: pointer;
  transition: color 0.2s ease-in-out;
}

.menu-toggle.open {
  display: block;
}

.menu-toggle:hover {
  color: lightgreen;
}

#navbar-color {
  background-color: #194b1e;
}

#basic-nav-dropdown {
  color: white;
  font-size: 24px;
  margin-top: -2px;
  transform: scale(1.1);
  color: lightgreen;
}

#basic-nav-dropdown:hover {
  transform: scale(1.1);
  color: lightgreen;
}

#nav-link {
  color: white;
  transition: all 0.2s ease-in
}

#nav-link:hover {
  transform: scale(1.1);
  color: lightgreen;
}

.ddItem {
  font-size: 24px;
}

.ddItem:active {
  font-size: 24px;
  background-color: #194b1e;
  color: white;
}

#button-color {
  background-color: white;
}

#button-color:hover {
  background-color: #194b1e;
  color: white;
}

.navLink:visited {
  color: black;
}

#navbar-color {
  z-index: 10;
  border-radius: 20px;
}


@media screen and (max-width: 950px) {
  
  .hero-image h2,
  .hero-image p {
    font-size: 3em;
    position: relative; /* This ensures the text is on top of the overlay */
    z-index: 400; /* Make the z-index higher than the parent element */
    color: white; /* This makes the text white */
    text-align: center;
    align-content: center;
    padding: 0px;
  }

  .header {
    background-color: #194b1e;
    height: 300px;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center; /* Add this line to center align items horizontally */
    position: relative;
    z-index: 10;
  }

  .headerLogo {
    margin-bottom: 20px; /* Add a margin to create space between the elements */
  }

  #Menu {
    display: flex;
    flex-direction: column;
    align-items: center; /* Center the content horizontally */
  }

  .socialIcons {
    display: none;
  }

  .menu-toggle {
    display: block;
    position: absolute;
    top: 220px; /* Adjust the top value to position it below the logo */
    right: 10px;
    z-index: 50; /* Increase the z-index value */
  }

  .MenuInfo {
    display: none;
  }

  .menu-links {
    position: absolute;
    display: none;
    top: 100%;
    right: 0; /* Updated to 'right' instead of 'left' */
    background-color: #194b1e;
    width: 100%;
    border-radius: 5px;
    padding: 10px;
    z-index: 30; /* Increase the z-index value */
  }

  .menu-links.open {
    display: block;
  }

  .menu-links li {
    display: block;
    padding: 10px 0px;
    width: 150px;
    color: white;
    z-index: 2; /* Increase the z-index value */
  }

  .menu-links li a {
    color: white;
    font-size: 20px;
    padding: 10px 20px;
    text-decoration: none;
    transition: all 0.2s ease-in-out;
  }

  .menu-links li a:hover {
    transform: scale(1.1);
    color: lightgreen;
  }

  .submenu {
    display: none;
    position: relative;
    top: 0;
    left: 0;
    background-color: #194b1e;
    width: 100%;
    border-radius: 5px;
    padding: 10px;
    z-index: 30; /* Increase the z-index value */
  }

  .menu-links li:hover .submenu {
    display: block;
  }
}



  @media screen and (max-width: 748px) {
    .hero-image h2,
    .hero-image p {
      font-size: 1em;
      position: relative; /* This ensures the text is on top of the overlay */
      z-index: 400; /* Make the z-index higher than the parent element */
      color: white; /* This makes the text white */
      text-align: center;
      align-content: center;
      padding: 0px;
    }

    .header {
      background-color: #194b1e;
      height: 300px;
      width: 100%;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center; /* Add this line to center align items horizontally */
      position: relative;
      z-index: 10;
    }
    
    .headerLogo {
      margin-bottom: 20px; /* Add a margin to create space between the elements */
    }
    
    #Menu {
      display: flex;
      flex-direction: column;
      align-items: center; /* Center the content horizontally */
    }

    .socialIcons {
      display: none;
    }

    .menu-toggle {
      display: block;
      position: absolute;
      top: 220px; /* Adjust the top value to position it below the logo */
      right: 10px;
      z-index: 50; /* Increase the z-index value */
    }

    .MenuInfo {
      display: none;
    }

    .menu-links {
      position: absolute;
      display: none;
      top: 100%;
      right: 0; /* Updated to 'right' instead of 'left' */
      background-color: #194b1e;
      width: 100%;
      border-radius: 5px;
      padding: 10px;
      z-index: 30; /* Increase the z-index value */
    }

    .menu-links.open {
      display: block;
    }

    .menu-links li {
      display: block;
      padding: 10px 0px;
      color: white;
      z-index: 2; /* Increase the z-index value */
    }

    .menu-links li a {
      color: white;
      font-size: 20px;
      padding: 10px 20px;
      text-decoration: none;
      transition: all 0.2s ease-in-out;
    }

    .menu-links li a:hover {
      transform: scale(1.1);
      color: lightgreen;
    }

    .submenu {
      display: none;
      position: relative;
      top: 0;
      left: 0;
      background-color: #194b1e;
      width: 100%;
      border-radius: 5px;
      padding: 10px;
      z-index: 30; /* Increase the z-index value */
    }

    .menu-links li:hover .submenu {
      display: block;
    }
}

